<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChoiceActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="30dp"
        android:paddingTop="80dp"
        android:paddingEnd="30dp"
        android:background="@color/light_brown"
        android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:text="@string/choose_the_mode"
                android:textSize="30sp"
                android:textColor="@color/dark_brown"/>

            <RadioGroup
                android:id="@+id/modeRadioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:text="@string/cpu"
                    android:textSize="40sp"
                    android:textColor="@color/dark_brown"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="70dp"
                    android:text="@string/human"
                    android:textSize="40sp"
                    android:textColor="@color/dark_brown" />
            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:text="@string/choose_your_shape"
                android:textSize="30sp"
                android:textColor="@color/dark_brown" />

            <RadioGroup
                android:id="@+id/shapeRadioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:text="@string/_x"
                    android:textSize="50sp"
                    android:textColor="@color/dark_brown" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:text="@string/_o"
                    android:textSize="50sp"
                    android:textColor="@color/dark_brown" />
            </RadioGroup>

            <Button
                android:id="@+id/btn_play"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start"
                android:backgroundTint="@color/cream"
                android:textColor="@color/dark_brown"
                android:layout_gravity="center_horizontal|bottom"
                android:gravity="bottom"
                android:layout_marginTop="80dp"
                android:textSize="40sp"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>