<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_brown"
    android:paddingStart="40dp"
    android:paddingEnd="40dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="25dp"
        android:text="@string/register"
        android:textColor="@color/dark_brown"
        android:textSize="40sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_marginBottom="20dp"
        android:text="@string/username"
        android:textColor="@color/dark_brown"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/et_uname"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:layout_alignBaseline="@+id/tv_username"
        android:layout_alignStart="@+id/et_confirmation"
        android:layout_toEndOf="@+id/tv_username"
        android:autofillHints="username"
        android:backgroundTint="@color/dark_brown"
        android:hint="@string/username_hint"
        android:inputType="text"
        android:textColor="@color/cream"
        android:textColorHint="@color/cream" />

    <TextView
        android:id="@+id/tv_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_username"
        android:layout_marginBottom="20dp"
        android:text="@string/password"
        android:textColor="@color/dark_brown"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:layout_alignBaseline="@id/tv_password"
        android:layout_alignStart="@id/et_confirmation"
        android:layout_toEndOf="@id/tv_password"
        android:autofillHints="password"
        android:backgroundTint="@color/dark_brown"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:textColor="@color/cream"
        android:textColorHint="@color/cream" />

    <TextView
        android:id="@+id/tv_confirmation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_password"
        android:layout_marginBottom="25dp"
        android:text="@string/confirmation"
        android:textColor="@color/dark_brown"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/et_confirmation"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:layout_alignBaseline="@+id/tv_confirmation"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@+id/tv_confirmation"
        android:autofillHints="password"
        android:backgroundTint="@color/dark_brown"
        android:hint="@string/re_password_hint"
        android:inputType="textPassword"
        android:textColor="@color/cream"
        android:textColorHint="@color/cream" />

    <Button
        android:id="@+id/btn_signUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_confirmation"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/dark_brown"
        android:text="@string/sign_up"
        android:textColor="@color/cream"
        android:textSize="18sp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_signUp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:text="@string/login"
        android:textColor="@color/dark_brown"
        android:textSize="40sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_username2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_title"
        android:layout_marginBottom="20dp"
        android:text="@string/username"
        android:textColor="@color/dark_brown"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/et_username2"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:layout_alignBaseline="@+id/tv_username2"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@+id/tv_username2"
        android:autofillHints="username"
        android:backgroundTint="@color/dark_brown"
        android:hint="@string/username_hint"
        android:inputType="text"
        android:textColor="@color/cream"
        android:textColorHint="@color/cream" />

    <TextView
        android:id="@+id/tv_password2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_username2"
        android:layout_marginBottom="30dp"
        android:text="@string/password"
        android:textColor="@color/dark_brown"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/et_password2"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:layout_alignBaseline="@id/tv_password2"
        android:layout_alignStart="@+id/et_username2"
        android:layout_toEndOf="@+id/tv_password"
        android:autofillHints="password"
        android:backgroundTint="@color/dark_brown"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:textColor="@color/cream"
        android:textColorHint="@color/cream" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_password2"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/dark_brown"
        android:text="@string/login"
        android:textColor="@color/cream"
        android:textSize="18sp"
        android:textStyle="bold" />

</RelativeLayout>